fixed responsive issues on small large phone displays

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -335,7 +335,7 @@ $main-color: black;
   }
 }
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 414px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 425px) {
   .navbar {
     display: none;
   }
@@ -627,7 +627,7 @@ $main-color: black;
   }
 }
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 414px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 425px) {
   .navbar-slider {
     display: flex;
     flex-direction: column;
@@ -691,7 +691,7 @@ $main-color: black;
   display: none;
 }
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 414px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 425px) {
   .nav-mobile-slider {
     display: flex;
     opacity: 0;
@@ -856,7 +856,7 @@ $main-color: black;
   }
 }
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 414px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 425px) {
   .dropdown-wrapper {
     width: 100%;
     height: 70%;
@@ -960,7 +960,7 @@ $main-color: black;
   }
 }
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 414px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 425px) {
   .main-title {
     width: 100%;
     margin: 1rem;
@@ -1054,7 +1054,7 @@ $main-color: black;
   }
 }
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 414px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 425px) {
   .selections {
     .selections-container {
       flex-direction: column;
@@ -1127,7 +1127,7 @@ $main-color: black;
 }
 
 // MOBILE PORTRAIT
-@media only screen and (min-device-width : 320px) and (max-device-width : 414px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 425px) {
   .products-page {
     .products-section {
       width: 100%;
@@ -1282,7 +1282,7 @@ $main-color: black;
   }
 }
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 414px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 425px) {
   .product-card {
     width: 48%;
     margin: .2rem .2rem;
@@ -1547,7 +1547,7 @@ $main-color: black;
   }
 }
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 414px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 425px) {
   .indi-wrapper {
     top: 4.5rem;
     &.opened {
@@ -1714,7 +1714,7 @@ $main-color: black;
   }
 }
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 414px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 425px) {
   .trends-container {
     flex-direction: column;
     justify-content: flex-end;
@@ -1785,7 +1785,7 @@ $main-color: black;
   display: none;
 }
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 414px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 425px) {
   .parallax-container {
     display: none;
   }
@@ -1793,7 +1793,7 @@ $main-color: black;
 
 
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 414px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 425px) {
   .parallax-mobile {
     @include flexbox; 
     flex-direction: column;
@@ -1997,7 +1997,7 @@ $main-color: black;
   }
 
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 414px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 425px) {
   .login {
     flex-direction: column;
     padding: 1rem 0;
@@ -2082,7 +2082,7 @@ $main-color: black;
   }
 }
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 414px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 425px) {
   .checkout-page {
     width: 90%;
     .checkout-header {
